public enum FoodType
{
    Meat,
    Seeds
}