@startuml ZooSimulator
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam dpi 120
top to bottom direction

title Zoo Simulator - Overview

package "Presentation.ConsoleApp" {
  class Program
  class ZooConsoleApp
  class ConsoleInput
  class ZooConsolePrinter
}

package "Application.Simulation" {
  class ZooSimulationService
}

package "Domain.Animals" {
  abstract class Animal
  class ZooAnimal
  class AnimalProfile
}

package "Domain.Habitats" {
  class Habitat
  class HabitatProfile
}

package "Domain.Events" {
  class ZooEvent
  enum ZooEventType
}

package "Domain.Finance" {
  class Ledger
  class Transaction
  class AnimalMarket
}

package "Domain.Feeding" {
  class FoodMarket
  enum FoodType
}

package "Domain.Visitors" {
  class VisitorFlow
  class VisitorPricing
  class VisitorRevenueCalculator
}

Program --> ZooConsoleApp
ZooConsoleApp --> ConsoleInput
ZooConsoleApp --> ZooConsolePrinter
ZooConsoleApp --> ZooSimulationService

ZooSimulationService o-- "0..*" ZooAnimal
ZooSimulationService o-- "0..*" Habitat
ZooSimulationService o-- "0..*" ZooEvent
ZooSimulationService *-- Ledger
ZooSimulationService --> FoodMarket
ZooSimulationService --> AnimalMarket
ZooSimulationService --> VisitorRevenueCalculator

ZooAnimal --|> Animal
Animal --> AnimalProfile
Habitat --> HabitatProfile
ZooEvent --> ZooEventType
Ledger o-- "0..*" Transaction
VisitorRevenueCalculator --> VisitorFlow
VisitorRevenueCalculator --> VisitorPricing
FoodMarket --> FoodType

note bottom
Detailed diagrams:
- ZooSimulator.Domain.puml
- ZooSimulator.Economy.puml
- ZooSimulator.Rules.puml
- ZooSimulator.Events.puml
- ZooSimulator.AppInfraUI.puml
end note
@enduml
